canary-demo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-demo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: canary-demo.ishii.ga
    http:
      paths:
      - path: /
        backend:
          serviceName: canary-demo
          servicePort: http
